// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correct summary with a single expense 1`] = `
<h2>
  Viewing 
  1
   
  expense
   totalling 
  $45.00
</h2>
`;

exports[`should render correct summary with all expenses 1`] = `
<h2>
  Viewing 
  3
   
  expenses
   totalling 
  $1,141.95
</h2>
`;
